сделаны задания с 1 по 5

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-/2024_2025_311_GTH_ZhivoderovDmitriy_00
-/2024_2025_311_GTH_ZhivoderovDmitriy_02
-/2024_2025_311_GTH_ZhivoderovDmitriy_07
 /gr1.html
 /Graph
-/task2_7.js
-/task3_2.js
-/task4_3.js
+/GitHub_Zhivoderov.txt
